@@ -24,24 +24,7 @@ getJavaSpecificOpts() {
   current_value=$2
   value=""
 
-  if [ $version -eq 8 ] ; then
-      value="\
-          -XX:+AggressiveOpts \
-           ${current_value}"
-
-  elif [ $version -gt 8 ] && [ $version -lt 11 ]; then
-      value="\
-          -XX:+AggressiveOpts \
-          --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-          --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-          --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-          --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-          --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-          --illegal-access=permit \
-          --add-modules=java.xml.bind \
-          ${current_value}"
-
-  elif [ "${version}" -ge 11 ] && [ "${version}" -lt 15 ]; then
+  if [ "${version}" -ge 11 ] && [ "${version}" -lt 14 ]; then
       value="\
           --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
@@ -52,16 +35,31 @@ getJavaSpecificOpts() {
           --illegal-access=permit \
           ${current_value}"
 
+  elif [ "${version}" -ge 14 ] && [ "${version}" -lt 15 ]; then
+        value="\
+            --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
+            --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
+            --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
+            --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
+            --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
+            --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
+            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
+            --illegal-access=permit \
+            ${current_value}"
+
   elif [ "${version}" -ge 15 ] ; then
       value="\
+          --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
           --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
           --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+          --add-opens=java.base/sun.util.calendar=ALL-UNNAMED \
           --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
           --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
           --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
           --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
           --add-opens=java.base/java.io=ALL-UNNAMED \
           --add-opens=java.base/java.nio=ALL-UNNAMED \
+          --add-opens=java.base/java.net=ALL-UNNAMED \
           --add-opens=java.base/java.util=ALL-UNNAMED \
           --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
           --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED \
